--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
       <%= link_to "Log in", new_session_path if !@is_login%>
   <% end %>
 
+  <% flash.each do |name, msg| %>
+    <%= content_tag :div, '✘ ' + msg, class: "#{name} alert alert-warning alert-dismissible close", role: 'alert', 'data-dismiss' => 'alert' %>
+  <% end %> 
+
 
 </body>
 </html>
