--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -43,7 +43,7 @@
 
           <ul class="dropdown-menu" role="menu">
               <li>
-                <%= link_to 'Log me out', sessions_path, method: :delete %>
+                <%= link_to 'Log me out', session_path, method: :delete %>
               </li>
               <li class="divider"></li>
             </ul>
@@ -63,7 +63,7 @@
                 <%= link_to "Sign up", new_user_path %>
               </li>
               <li>
-                <%= link_to 'Log in', new_sessions_path  %>   
+                <%= link_to 'Log in', new_session_path  %>   
               </li>
 
               <li class="divider"></li>
