--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -10,7 +10,7 @@
       </button>
 
       <a class="navbar-brand" href="/">
-<!--         <%= image_tag 'GeneralAssemblylogo.jpg', width: '30px' %> -->
+        <!--         <%= image_tag 'GeneralAssemblylogo.jpg', width: '30px' %> -->
         foodiefind
       </a>  
 
@@ -34,42 +34,42 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
 
-            <% if current_user %>
+        <% if current_user %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user fa-fw"></i> 
             foodie <%= current_user.name %> in the house
             <span class="caret"></span>
           </a>
 
           <ul class="dropdown-menu" role="menu">
-              <li>
-                <%= link_to 'Log me out', session_path, method: :delete %>
-              </li>
-              <li class="divider"></li>
-            </ul>
-         
+            <li>
+              <%= link_to 'Log me out', session_path, method: :delete %>
+            </li>
+            <li class="divider"></li>
+          </ul>
+          
         </li>
 
-      <% else %>
-          <li class="dropdown">
+        <% else %>
+        <li class="dropdown">
 
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Please log in
-              <span class="caret"></span>
-            </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-user fa-fw"></i> Please log in
+            <span class="caret"></span>
+          </a>
 
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <%= link_to "Sign up", new_user_path %>
-              </li>
-              <li>
-                <%= link_to 'Log in', new_session_path  %>   
-              </li>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <i class="fa fa-sign-in"></i><%= link_to "Sign up", new_user_path %>
+            </li>
+            <li>
+              <%= link_to 'Log in', new_session_path  %>   
+            </li>
 
-              <li class="divider"></li>
-            </ul>
+            <li class="divider"></li>
+          </ul>
 
-          </li>      
+        </li>      
         <% end %>
 
       </ul>
