--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,30 @@
-<h1>Sign up here</h1>
+<div class="row">
+  <div class="col-xs-4 col-xs-offset-4">
+    <h1>sign up</h1>
 
-<%= form_for @user do |f| %>
-  <%= f.text_field :name, placeholder:"Name goes here..." %>
-  <%= f.text_field :email, placeholder:"Email goes here..." %>
-  <%= f.password_field :password, placeholder:"Password goes here..." %>
-  <%= f.password_field :password_confirmation, placeholder:"confirm password..." %>
+      <%= form_for @user do |f| %>
 
-  <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
+       <div class="form-group">
+          <%= f.text_field :name, placeholder:"Name goes here..." %>
+        </div>
+        <div class="form-group">
+          <%= f.text_field :email, placeholder:"Email goes here..." %>
+        </div>
+        <div class="form-group">
+          <%= f.password_field :password, placeholder:"Password goes here..." %>
+        </div>
+        <div class="form-group">
+          <%= f.password_field :password_confirmation, placeholder:"confirm password..." %>
+        </div>
 
-  <%= f.submit "Sign UP!" %>
+        <div class="form-group">
+          <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
+        </div>
 
-<% end %>
+        <div class="form-group">
+          <%= f.submit "sign me up!" %>
+        </div>
+
+      <% end %>
+  </div><!--end of col-->
+</div><!--end of row-->
