--- a/app/views/food_trucks/new.html.erb
+++ b/app/views/food_trucks/new.html.erb
@@ -4,6 +4,9 @@
   <%= f.text_field :name, placeholder:"Name goes here..." %>
   <%= f.text_field :description, placeholder:"what's your truck about..." %>
 
+  <%= collection_check_boxes(:food_truck, :food_categories, FoodCategory.all, :id, :name) do |f| f.label(class: "check_box") { f.check_box(class: "check_box") } end %>
+
+
 
   <%= f.submit "get rolling!" %>
 
