--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-group">
-          <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
+          <%= select_tag "form_tag", options_for_select(["foodie", "truck owner"]) %>
         </div>
 
         <div class="form-group">
