working on putting the food categories on the new food truck page

--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -1,1 +1,10 @@
 <h1>this is the food trucks index page!</h1>
+
+<ul>
+  <% @food_trucks.each do |f| %>
+  <li>
+    <strong> <%= f.name %> </strong> 
+    <%= link_to "for truck info", edit_food_truck_path(f) %>
+  </li>
+  <% end %>
+</ul>
