--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= content_tag :div, '✘ ' + msg, class: "#{name} alert alert-warning alert-dismissible close", role: 'alert', 'data-dismiss' => 'alert' %>
     <% end %> 
 
-    <div class = "navbar navbar-default navbar-fixed-bottom" style="background:none; border:none">
+    <div class = "navbar navbar-default navbar-fixed-bottom" style="background:none; border:none;">
                
       <div class = "container" style="z-index:0">
         <p class = "big" style="padding-bottom:0px; margin-bottom:0px">foodiefind</p>
