--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>edit your profile</h1>
+<h1>show your profile</h1>
 
 <%= form_for @user do |f| %>
   <%= f.text_field :name, placeholder:"Name goes here..." %>
