--- a/app/views/food_trucks/new.html.erb
+++ b/app/views/food_trucks/new.html.erb
@@ -6,11 +6,22 @@
   <%= f.text_field :website, placeholder:"website?" %>
 
 
+<!-- :food_categories, -->
+<!-- @foodstuffs, -->
+<% #id = @foodstuffs[f].id%>
+<% #name = @foodstuffs[f].name%>
 
-    <%= f.collection_check_boxes(:food_categories, @foodstuffs, :_id, :name) do |b| %>
-    <%= b.label(:"data-value" => b.value) { b.check_box + b.text } %><br />
+<!--Find total number of @food_categories
+  create iteration loop based off this
+  feed value to n 
+  id = @foodstuffs[n].id
+  name = @foodstuffs[n].name -->
+ <% binding.pry %>
+    <%= collection_check_boxes(:food_truck, :food_categories, @foodstuffs, id, name) do |b| %>
+   
+      <%= b.label(:"data-value" => b.value) { b.check_box + b.text } %>
     <% end %>
-
+  <% #end %>
   <%= f.submit "get rolling!" %>
 
 <% end %>
