one step closer to the edge

--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -3,8 +3,8 @@
 <ul>
   <% @food_trucks.each do |f| %>
   <li>
-    <strong> <%= f.name %> </strong> 
-    <%= link_to "for truck info", edit_food_truck_path(f) %>
+    <strong> <%= f.name %> </strong>
+    <%= link_to "for truck info", food_truck_path(f) %>
   </li>
   <% end %>
 </ul>
