working on many to many functionality for food trucks to food categories

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
       <%= form_for @user do |f| %>
 
-       <div class="form-group">
+       <div class="form-group" autofocus>
           <%= f.text_field :name, placeholder:"Name goes here..." %>
         </div>
         <div class="form-group">
