--- a/app/views/food_trucks/new.html.erb
+++ b/app/views/food_trucks/new.html.erb
@@ -1,16 +1,31 @@
-<h1>Register your food truck</h1>
+<div class = "row">
+  <div class="col-xs-4 col-xs-offset-4">
+    <h1>Register your food truck</h1>
 
-<%= form_for @food_truck do |f| %>
-  <%= f.text_field :name, placeholder:"Name goes here..." %>
-  <%= f.text_field :description, placeholder:"what's your truck about..." %>
-  <%= f.text_field :website, placeholder:"website?" %>
+    <%= form_for @food_truck do |f| %>
+
+      <div class="form-group">
+        <%= f.text_field :name, placeholder:"Name goes here..." %>
+      </div>
+      <div class="form-group">
+        <%= f.text_field :description, placeholder:"what's your truck about..." %>
+      </div>
+      <div class="form-group">
+        <%= f.text_field :website, placeholder:"website?" %>
+      </div>
 
 
 
-    <%= collection_check_boxes(:food_trucks, :food_categories, @foodstuffs, :_id, :name) do |b| %>
-    <%= b.label(:"data-value" => b.value) { b.check_box + b.text } %>
+      <div class="form-group">
+          <%= collection_check_boxes(:food_trucks, :food_categories, @foodstuffs, :_id, :name) do |b| %>
+          <%= b.label(:"data-value" => b.value) { b.check_box + b.text } %><br />
+          <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "get rolling!" %>
+      </div>
+
     <% end %>
-
-  <%= f.submit "get rolling!" %>
-
-<% end %>
+  </div><!--end col-->
+</div><!--end row-->
