--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
 
     <%= render 'partials/nav' %>
 
-    <div style="z-index:100"><%= yield %></div>
+    <%= yield %>
 
     <% flash.each do |name, msg| %>
       <%= content_tag :div, '✘ ' + msg, class: "#{name} alert alert-warning alert-dismissible close", role: 'alert', 'data-dismiss' => 'alert' %>
     <% end %> 
 
-    <div class = "navbar navbar-default navbar-fixed-bottom" style="background:none; border:none;">
+    <div class = "navbar navbar-default navbar-fixed-bottom" style="background:none; border:none; pointer-events:none">
                
       <div class = "container" style="z-index:0">
         <p class = "big" style="padding-bottom:0px; margin-bottom:0px">foodiefind</p>
