--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -1,7 +1,6 @@
 <div class="row">
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-6 col-xs-offset-3">
     <h1>check to see who's rolling!</h1>
-<h1>this is the food trucks index page!</h1>
 
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
@@ -9,11 +8,11 @@
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#<%=f.name.gsub(/\W/,'')%>">
-                  <strong> <%= f.name.downcase %> </strong> 
+                  <i class="fa fa-truck">&nbsp;</i> <%= f.name.downcase %> 
                 </a>
               </h4>
             </div>
-            <div id="<%=f.name.gsub(/\W/,'')%>" class="panel-collapse collapse in">
+            <div id="<%=f.name.gsub(/\W/,'')%>" class="panel-collapse collapse">
               <div class="panel-body">
                 <%= f.description %><br />
                 <a href="<%=f.website%>" target="blank"><%=f.website%></a>
