working on routes and truck display

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -36,7 +36,7 @@
         <% if current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user fa-fw"></i> 
-             foodie <%= current_user.name %> in the house
+             foodie <%= current_user.name.upcase %> in the house
             <span class="caret"></span>
           </a>
 
