--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-10 col-sm-4 col-sm-offset-4 col-xs-offset-1">
     <h1>check to see who's rolling!</h1>
 <h1>this is the food trucks index page!</h1>
 
