--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-10 col-sm-4 col-xs-offset-1 col-sm-offset-4">
     <h1>sign up</h1>
 
       <%= form_for @user do |f| %>
