nav fixes for current user

--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -8,7 +8,7 @@
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#<%=f.name.gsub(/\W/,'')%>">
-                  <i class="fa fa-truck">&nbsp;</i> <%= f.name.downcase %> 
+                  <i class="fa fa-truck">&nbsp;&nbsp;</i> <%= f.name.downcase %> 
                 </a>
               </h4>
             </div>
