--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,7 +38,7 @@ body {
   color: rgba(250, 250, 250, .6);
   letter-spacing: -10px;
   z-index: -9;
-  pointer-events:none;
+  clear: both;
   // -webkit-touch-callout: none;
   // -webkit-user-select: none;
   // -khtml-user-select: none;
