--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -10,7 +10,7 @@
       </button>
 
       <a class="navbar-brand" href="/">
-        <i class="fa fa-cutlery"></i>  foodiefind
+        <i class="fa fa-cutlery"></i>&nbsp;&nbsp;foodiefind
       </a>  
 
     </div>
@@ -42,7 +42,10 @@
 
           <ul class="dropdown-menu" role="menu">
             <li>
-             <%= link_to '  Log me out', session_path, method: :delete, class: "fa fa-sign-out" %>
+             <%= link_to '  update my profile', edit_user_path(current_user), class: "fa fa-cogs" %>
+            </li>
+            <li>
+             <%= link_to '  log me out', session_path, method: :delete, class: "fa fa-sign-out" %>
             </li>
           </ul>
           
