--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,27 @@
-<h1>edit your profile</h1>
+<div class = "row">
+  <div class="col-xs-4 col-xs-offset-4">
+    <h1>edit the fields you wish to change</h1>
 
-<%= form_for @user do |f| %>
-  <%= f.text_field :name, placeholder:"Name goes here..." %>
-  <%= f.text_field :email, placeholder:"Email goes here..." %>
-  <%= f.password_field :password, placeholder:"Password goes here..." %>
+      <%= form_for @user do |f| %>
 
-  <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
+      <div class="form-group">
+        <%= f.text_field :name, placeholder:"Name goes here..." %>
+      </div>
+      <div class="form-group">
+        <%= f.text_field :email, placeholder:"Email goes here..." %>
+      </div>
+      <div class="form-group">
+        <%= f.password_field :password, placeholder:"Password goes here..." %>
+      </div>
 
-  <%= f.submit "Sign UP!" %>
+      <div class="form-group">
+        <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
+      </div>
 
-<% end %>
+      <div class="form-group">
+        <%= f.submit "update me!" %>
+      </div>
+
+      <% end %>
+  </div><!--end col-->
+</div><!--end row-->
