--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>edit your profile</h1>
 
-<%= form_for @user do |f| %>
+<%= form_for @user, {url: user_path } do |f| %>
   <%= f.text_field :name, placeholder:"Name goes here..." %>
   <%= f.text_field :email, placeholder:"Email goes here..." %>
   <%= f.password_field :password, placeholder:"Password goes here..." %>
