--- a/app/views/food_trucks/edit.html.erb
+++ b/app/views/food_trucks/edit.html.erb
@@ -1,17 +1,17 @@
 <div class = "row">
   <div class="col-xs-4 col-xs-offset-4">
-    <h1>Register your food truck</h1>
+    <h1>edit the fields you wish to change</h1>
 
       <%= form_for @food_truck do |f| %>
 
         <div class="form-group">
-          <%= f.text_field :name, placeholder:"Name goes here..." %>
+          <%= f.text_field :name, placeholder: f.name %>
         </div>
         <div class="form-group">
-          <%= f.text_field :description, placeholder:"what's your truck about..." %>
+          <%= f.text_field :description, placeholder: f.description %>
         </div>
         <div class="form-group">
-          <%= f.text_field :website, placeholder:"website?" %>
+          <%= f.text_field :website, placeholder: f.website %>
         </div>
 
         <div class="form-group">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.submit "get rolling!" %>
+          <%= f.submit "update me!" %>
         </div>
 
       <% end %>
