--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= yield %>
 
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, '✘ ' + msg, class: "#{name} alert alert-warning alert-dismissible close", role: 'alert', 'data-dismiss' => 'alert' %>
+      <%= content_tag :div, '✘ ' + msg, class: "#{name} alert alert-warning alert-dismissible close pull-left", role: 'alert', 'data-dismiss' => 'alert' %>
     <% end %> 
 
     <div class = "navbar navbar-default navbar-fixed-bottom" style="background:none; border:none; pointer-events:none">
