--- a/app/views/food_trucks/index.html.erb
+++ b/app/views/food_trucks/index.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
-<<<<<<< HEAD
-  <div class="col-xs-6 col-xs-offset-3">
-=======
+<!--   <div class="col-xs-6 col-xs-offset-3">-->
+ 
   <div class="col-xs-10 col-sm-4 col-sm-offset-4 col-xs-offset-1">
->>>>>>> 095f6a7c9d6b661e5727c6597f0ff6dff95d0cdc
     <h1>check to see who's rolling!</h1>
 
       <div class="panel-group" id="accordion">
