--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,11 +3,7 @@
     <h1>edit the fields you wish to change</h1>
 
 <%= form_for @user, {url: user_path } do |f| %>
-  <%= f.text_field :name, placeholder:"Name goes here..." %>
-  <%= f.text_field :email, placeholder:"Email goes here..." %>
-  <%= f.password_field :password, placeholder:"Password goes here..." %>
 
-  <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
       <div class="form-group">
         <%= f.text_field :name, placeholder:"Name goes here..." %>
       </div>
@@ -15,7 +11,11 @@
         <%= f.text_field :email, placeholder:"Email goes here..." %>
       </div>
       <div class="form-group">
-        <%= f.password_field :password, placeholder:"Password goes here..." %>
+        <%= f.password_field :password, placeholder:"type in new password if you want..." %>
+      </div>
+
+      <div class="form-group">
+        <%= f.password_field :password_confirmation, placeholder:"confirm new password..." %>
       </div>
 
       <div class="form-group">
