--- a/app/assets/stylesheets/bootstrapped.css.scss
+++ b/app/assets/stylesheets/bootstrapped.css.scss
@@ -4050,6 +4050,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   width: 100%;
+  vertical-align: middle;
 }
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   border-bottom-right-radius: 0;
