--- a/app/views/food_trucks/edit.html.erb
+++ b/app/views/food_trucks/edit.html.erb
@@ -1,5 +1,5 @@
 <div class = "row">
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-4 col-xs-offset-4 form-container">
     <h1>edit the fields you wish to change</h1>
 
       <%= form_for @food_truck do |f| %>
@@ -20,6 +20,7 @@
 
         <div class="form-group">
           <%= f.submit "update me!" %>
+          <%= link_to "this truck no longer exists!", :food_truck, method: :delete, data: { confirm: "really? #{@foodtruck.name.downcase}? no longer rolling???"}, class: 'btn btn-primary pull-right', style: 'background-color:#1A91E0' %>
         </div>
 
       <% end %>
