--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -26,11 +26,19 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <form class="navbar-form navbar-left" role="search">
+<!--         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="type in a category">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
+        </form> -->
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <%= form_tag("/search", method: "get", placeholder: "type in a category") do |q| %>
+            <%= text_field_tag(:q) %>
+            <button type="submit" class="btn btn-default">submit</button>
+           <% end %>
+          </div>
         </form>
 
         <% if current_user %>
