--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <div class = "row">
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-4 col-xs-offset-4 form-container">
     <h1>edit the fields you wish to change</h1>
 
-<%= form_for @user, {url: user_path, method: :patch} do |f| %>
+      <%= form_for @user, {url: user_path, method: :patch} do |f| %>
 
       <div class="form-group">
         <%= f.text_field :name, placeholder:"Name goes here..." %>
@@ -11,7 +11,7 @@
         <%= f.text_field :email, placeholder:"Email goes here..." %>
       </div>
       <div class="form-group">
-        <%= f.password_field :password, placeholder:"type in new password if you want..." %>
+        <%= f.password_field :password, placeholder:"new password?" %>
       </div>
 
       <div class="form-group">
@@ -22,8 +22,9 @@
         <%= select_tag "user[user_type]", options_for_select(["foodie", "truck owner"]) %>
       </div>
 
-      <div class="form-group">
-        <%= f.submit "update me!"%>
+      <div class="form-group btn-toolbar">
+        <%= f.submit "update me!", method: :patch, class: 'btn btn-primary btn-large'%>
+        <%= link_to "delete me instead!", :user, method: :delete, data: { confirm: "really #{@user.name.upcase}? you're leaving us???"}, class: 'btn btn-primary pull-right', style: 'background-color:#1A91E0' %>
       </div>
 
       <% end %>
