--- a/app/views/food_trucks/new.html.erb
+++ b/app/views/food_trucks/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "row">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4">
-    <h1>Register your food truck</h1>
+  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 form-container">
+    <h1>register your truck!</h1>
 
       <%= form_for @food_truck do |f| %>
 
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.collection_check_boxes :category_ids, FoodCategory.all, :id, :name %>
+          <%= f.collection_check_boxes :category_ids, FoodCategory.all, :id, :name, class:"checkbox", style:"padding-right: 5px" %><br />
         </div>
 
         <div class="form-group">
