--- a/app/views/food_trucks/new.html.erb
+++ b/app/views/food_trucks/new.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.collection_check_boxes :category_ids, FoodCategory.all, :id, :name, class:"checkbox", style:"padding-right: 5px" %><br />
+          <%= f.collection_check_boxes :category_ids, FoodCategory.all, :id, :name_with_spaces, class:"checkbox", style:"padding-right: 5px" %><br />
         </div>
 
         <div class="form-group">
